WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27113
Ogg mimetypes are incorrect
https://bugs.webkit.org/show_bug.cgi?id=27113
Summary
Ogg mimetypes are incorrect
John Drinkwater
Reported
2009-07-09 05:18:04 PDT
The mimetypes introduced in the changeset here
http://trac.webkit.org/changeset/43972
have incorrect types for the application/ogg in initializeMediaTypeMaps() application/ogg should no longer cover .ogg files, instead they should be under audio/ogg. Which would leave you with: // Ogg { "application/ogg", "ogx" }, { "audio/ogg", "ogg" }, { "audio/ogg", "oga" }, { "video/ogg", "ogv" }, See the attached URL for further information. You should also be able to refer to
http://svn.apache.org/viewvc/httpd/httpd/trunk/docs/conf/mime.types?view=co
Attachments
ogg is audio/ogg
(1.50 KB, patch)
2009-12-09 02:43 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2009-12-09 02:43:18 PST
Created
attachment 44527
[details]
ogg is audio/ogg
WebKit Review Bot
Comment 2
2009-12-09 02:47:10 PST
style-queue ran check-webkit-style on
attachment 44527
[details]
without any errors.
Eric Carlson
Comment 3
2009-12-09 05:07:43 PST
Comment on
attachment 44527
[details]
ogg is audio/ogg r=me
WebKit Commit Bot
Comment 4
2009-12-09 14:11:26 PST
Comment on
attachment 44527
[details]
ogg is audio/ogg Clearing flags on attachment: 44527 Committed
r51921
: <
http://trac.webkit.org/changeset/51921
>
WebKit Commit Bot
Comment 5
2009-12-09 14:11:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug