2009-12-09  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Carlson.

        Ogg mimetypes are incorrect
        https://bugs.webkit.org/show_bug.cgi?id=27113

        The ogg extension is handled by audio/ogg instead of
        application/ogg. See
        http://wiki.xiph.org/MIME_Types_and_File_Extensions

        * platform/MIMETypeRegistry.cpp:
        (WebCore::TypeExtensionPair::):

Canonical link: https://commits.webkit.org/43346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51921 268f45cc-cd09-0410-ab3c-d52691b4dbfc